# transaction_analysis

./: README.md  config.py  main.py  pyproject.toml
src/: data_marketstack.json  date_period.py  read_xls.py  reports.py  services.py  utils.py  views.py
src/report/: exp_work_w_end.py
src/servis/: investment_piggy.py
src/web/: events.py
tests/: data.py  data_for_test.py  test_date_period.py  test_events.py  test_exp_work_w_end.py  test_investment_piggy.py  test_read_xls.py  test_services.py  test_utils.py  test_views.py
